--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -2,7 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+::-webkit-scrollbar {
+    width: 14px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #fff;
+    border: 2px solid black;
+    border-radius: 3rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #EEE;
+}
+
+html,
+body {
     margin: 0;
     height: 100%;
     width: 100%;
