--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,5 +14,9 @@ html, body {
 }
 
 .nt-shadow {
-    box-shadow: 2px 2px 0px 0 rgb(0, 0, 0);
+    box-shadow: 5px 5px 0px 0 rgb(0, 0, 0);
+}
+
+.nt-shadow-sm {
+    box-shadow: 3px 3px 0px 0 rgb(0, 0, 0);
 }
